--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.9",
-    "supervisor": "^0.12.0"
+    "forever": "^4.0.3",
+    "supervisor": "^0.12.0",
+    "typescript": "^4.7.4"
   }
 }
